--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs --host 0.0.0.0 --port 3001"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
