--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
   app:
     build:
       context: .
-      dockerfile: ${DOCKERFILE}
+      dockerfile: ${DOCKERFILE_BACKEND}
     ports:
-      - "${PORT}:${PORT}"
+      - "${PORT_API}:${PORT_API}"
     env_file: .env
     environment:
       - NODE_ENV=${NODE_ENV}
