--- a/frontend/DockerfileFront
+++ b/frontend/DockerfileFront
@@ -3,13 +3,13 @@ FROM node:24-alpine
 
 WORKDIR /app
 
-COPY frontend/package*.json ./
+COPY package*.json ./
 
 RUN npm ci #--only=production
 
 RUN echo "Hello from Dockerfile"
 
-COPY frontend ./
+COPY . .
 
 RUN ls -la
 
