--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -4,10 +4,12 @@ WORKDIR /app
 
 COPY package*.json ./
 
+ENV NODE_ENV=development
+
 RUN npm ci
 
 COPY . .
 
-EXPOSE 3000
+EXPOSE 3001
 
 CMD ["npm", "run", "dev"]
