--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   app:
     build:
@@ -6,14 +5,13 @@ services:
       dockerfile: ${DOCKERFILE_BACKEND}
     ports:
       - "${PORT_API}:${PORT_API}"
-    env_file: .env
     environment:
       - NODE_ENV=${NODE_ENV}
       - DB_HOST=postgres
       - DB_PORT=5432
-      - DB_NAME=taskmanager
-      - DB_USER=admin
-      - DB_PASSWORD=password
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     depends_on:
@@ -25,15 +23,14 @@ services:
   postgres:
     image: postgres:15-alpine
     environment:
-      - POSTGRES_DB=taskmanager
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
-      - "127.0.0.1:5432:5432"
+      - "127.0.0.1:5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database:/docker-entrypoint-initdb.d
-
   redis:
     image: redis:7-alpine
     ports:
@@ -45,8 +42,8 @@ services:
     image: dpage/pgadmin4
     container_name: taskmanager1-pgadmin
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
     ports:
       - "5050:80"
   frontend:
@@ -55,7 +52,6 @@ services:
       dockerfile: "${DOCKERFILE_FRONT}"
     ports:
       - "${PORT_FRONTEND}:${PORT_FRONTEND}"
-    env_file: .env
     environment:
     - NODE_ENV=${NODE_ENV}
     - API_BASE_URL=${API_BASE_URL}
