--- a/frontend/DockerfileFront
+++ b/frontend/DockerfileFront
@@ -5,17 +5,17 @@ WORKDIR /app
 
 COPY package*.json ./
 
+ENV NODE_ENV=production
+
 RUN npm ci #--only=production
 
-RUN echo "Hello from Dockerfile"
+#RUN echo "Hello from Dockerfile"
 
 COPY . .
 
-RUN ls -la
-
 RUN npm run build
 
-EXPOSE 3001
+EXPOSE 3000
 
 CMD ["npm", "start"]
 #CMD ["tail", "-f", "/dev/null"]
