--- a/frontend/DockerfileFront_dev
+++ b/frontend/DockerfileFront_dev
@@ -3,14 +3,15 @@ FROM node:24-alpine
 
 WORKDIR /app
 
-COPY frontend/package*.json ./
+COPY package*.json ./
+ENV NODE_ENV=development
 
 RUN npm ci
 
-COPY frontend ./
+COPY . .
 
 
 
-EXPOSE 3001
+EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
