--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - .:/app
       - /app/node_modules
+    restart: always
   postgres:
     image: postgres:15-alpine
     environment:
