--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,28 @@
-# Server
-PORT=3000
-PORT_FRONTEND=3001
+#Server
+HOST=127.0.0.1
+PORT_API=3001
+PORT_FRONTEND=3000
 
 NODE_ENV=development
-API_BASE_URL=http://localhost:3000
+API_BASE_URL=http://localhost:3001
+FRONT_BASE_URL=http://localhost:3000
 
-# Database
+#Database
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=taskmanager
 DB_USER=admin
-DB_PASSWORD=password
+DB_PASSWORD=password123
 
-# Redis
+PGADMIN_EMAIL=admin@qmport.com
+PGADMIN_PASSWORD=password123
+
+#Redis
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-# Cache
+#Cache
 CACHE_TTL=300
 
-DOCKERFILE=Dockerfile_dev
+DOCKERFILE_BACKEND=Dockerfile_dev
 DOCKERFILE_FRONT=DockerfileFront_dev
